<resources>
    <string name="app_name">Homework8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Groups</string>
    <string name="nav_header_subtitle">You should choose one of them.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_family">Family</string>
    <string name="menu_gallery">School</string>
    <string name="menu_friend">Friend</string>
    <string name="menu_work">Work</string>
    <string name="menu_home">Home</string>
    <string name="add">Add</string>
    <string name="user_name_empty"> name is empty</string>
    <string name="user_surname_empty">surname is empty</string>
    <string name="user_phone_empty">phone is empty</string>
    <string name="user_address_empty">address is empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>