<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/baseline_family"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/baseline_school"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/baseline_friend"
            android:title="@string/menu_friend" />

        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/baseline_work"
            android:title="@string/menu_work" />
    </group>
</menu>